vlib/v/checker/tests/method_op_err.vv
struct User {
    a int
    b int
}

struct Foo {
    a int
    b int
}

fn (u User) + () {
}

fn (u User) - (f Foo) User {
    return User{u.a - f.a, u.b-f.a}
}

fn (u User) > (u1 User) User {
    return User{}
}

fn main() {
    println(User{3, 4})
    println(User{3, 4} - Foo{3, 3})
    println(User{3, 2} < User{2, 4})
    println(User{3, 4} < Foo{3, 4})
}
